Fix cropping of tooltips at the top

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 #container {
+	padding-top: 20px;
 	max-width: 960px;
 }
 .selected {
